addition of sign in button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
+              <div class="btn.con">
+            <button class="sign-in btn"> sign in</button>
+            </div>
         </nav>
 
         <!-- Aside for Animation  -->
